[package]
name = "n-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.32.3"
vulkano-win = "0.32.0"
vulkano-util = "0.32.0"
bytemuck = "1.12.3"
winit = "0.27.5"
vulkano-shaders = "0.32.0"

[profile.dev]
opt-level = 0